# ias0220_week5_bonus_assignment

./: CMakeLists.txt  Readme.md  package.xml
config/: controllers.yaml  machine_vision_bonus_rviz.rviz  mvb_rviz.rviz  mvt_rviz.rviz
launch/: ddrobot_gazebo.launch  ddrobot_main.launch  mvb_gazebo.launch  mvb_main.launch  mvb_spawn.launch  mvt_main.launch  mvt_spawn.launch
scripts/: ddrobot_circular_motion.py  locomotion.py
urdf/: Readme.md
urdf/ddrobot/: robot.sdf  robot.urdf  robot.xacro
urdf/ddrobot/xacro/: chasis.xacro  gazebo.xacro  materials.xacro  transmissions.xacro  wheels.xacro
urdf/observerbot/: gazebo.urdf  robot.xacro
urdf/studentbot/: gazebo.urdf  robot.xacro
urdf/studentbot/xacro/: chasis.xacro  gazebo.xacro  materials.xacro
worlds/: mvb.world  mvb_playground.world
